# AgentScript_fin

./: README (3).md
AgentScript/: .dockerignore  .gitignore  DEPLOYMENT_OPTIONS.md  Dockerfile  QUICK_START.md  README.md  docker-compose.yml  pyproject.toml  test_implementation.py  test_output.txt
AgentScript/.deepeval/: .deepeval_telemetry.txt
AgentScript/.hypothesis/constants/: 000a207016715005  0022baf112a6479f  004e722d2b39195a  006b559781a41f7f  008627a8fb629140  0088f2f8d745cacb  0151985d8fca8bb0  0180d0179b1e0750  01831d6f995783ed  01bf8c317887b689  01c067336e9c0e8e  01cbb3b3fc2a66e8  01e17e88cee170ff  020bd4b9cc3144b7  022d71bfc30b1c15  02361c7d2d1bf455  0259594f63b2a1f6  025c876b6e0ab5a5  02aa8a0079b29a8e  02b1efb683703bc3  02eceb2fd2d826c2  030f52412f87773f  0333f17f4dab2227  033cea2e5cae6cf7  (+2269 more)
AgentScript/benchmarks/: README.md  __init__.py  latest.json  latest.md  run_benchmarks.py
AgentScript/dashboard/: index.html  package-lock.json  package.json
AgentScript/deployment/: VALIDATION.md
AgentScript/docs/: API_REFERENCE.md  ARCHITECTURE.md  GETTING_STARTED.md  OPERATIONS.md  SECURITY.md  SLAS.md  language-spec.md
AgentScript/evals/: __init__.py  regression_cases.json  run_regressions.py
AgentScript/examples/: demo_fault_tolerance.py  legal_demo.py  legal_research.as
AgentScript/tests/: manual-trace-c207116bcdc84dac927dad20f9ff9514.sqlite-journal  test_legal_demo.py  test_lexer.py  test_observability.py  test_parser.py  test_runtime.py  test_semantics_ir.py  test_week8_assets.py  trace-a996336644ba452191a19ecc98fc7557.sqlite-journal
(+120 files in other folders)
